// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent Banner Text should correctly render banner text 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #BEBEBE;
}

.c0 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus,
.c0 a:hover {
  color: #FFFFFF;
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.875rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

<p
  className="c0"
>
  Just some text
</p>
`;

exports[`Consent Banner Text should correctly render banner text with a link 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #BEBEBE;
}

.c0 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus,
.c0 a:hover {
  color: #FFFFFF;
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.875rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

<p
  className="c0"
>
  Some text 
  <a
    href="https://www.bbc.co.uk"
  >
    with a link
  </a>
   followed by text.
</p>
`;
